add multi language for validate

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,9 +1,16 @@
 {
-    "email.reset-passwordl.subject": "Reset password",
-    "email.reset-passwordl.content.line1": "We have received a request to change your password.",
-    "email.reset-passwordl.content.line2": "Please access the URL below to reset your password.",
-    "email.reset-passwordl.content.line3": "▼Password reset URL:",
-    "email.reset-passwordl.content.line4": "Click here: ",
-    "email.reset-passwordl.content.line5": "This email is sent automatically.",
-    "email.reset-passwordl.content.line6": "Please do not reply to this email as we cannot change the password via this email"
+    "email.reset-password.subject": "Reset password",
+    "email.reset-password.content.line1": "We have received a request to change your password.",
+    "email.reset-password.content.line2": "Please access the URL below to reset your password.",
+    "email.reset-password.content.line3": "▼Password reset URL:",
+    "email.reset-password.content.line4": "Click here: ",
+    "email.reset-password.content.line5": "This email is sent automatically.",
+    "email.reset-password.content.line6": "Please do not reply to this email as we cannot change the password via this email",
+    "Update Password Success": "Update password successfully",
+    "You are not authorized to access this page": "You are not authorized to access this page",
+    "Data not found": "Data not found",
+    "Something went wrong": "Something went wrong",
+    "Created successfully": "Created successfully",
+    "Updated successfully": "Updated successfully",
+    "Deleted successfully": "Deleted successfully"
 }
