--- a/lang/vi.json
+++ b/lang/vi.json
@@ -5,5 +5,12 @@
     "email.reset-password.content.line3": "▼URL đặt lại mật khẩu:",
     "email.reset-password.content.line4": "Nhấp vào đây: ",
     "email.reset-password.content.line5": "Email này được gửi tự động.",
-    "email.reset-password.content.line6": "Vui lòng không trả lời email này vì chúng tôi không thể thay đổi mật khẩu qua email này"
+    "email.reset-password.content.line6": "Vui lòng không trả lời email này vì chúng tôi không thể thay đổi mật khẩu qua email này",
+    "Update Password Success": "Cập nhật mật khẩu thành công",
+    "You are not authorized to access this page": "Bạn không được phép truy cập trang này",
+    "Data not found": "Không tìm thấy dữ liệu",
+    "Something went wrong": "Đã xảy ra lỗi",
+    "Created successfully": "Tạo thành công",
+    "Updated successfully": "Cập nhập thành công",
+    "Deleted successfully": "Xóa thành công"
 }
