--- a/resources/js/Languages/en.json
+++ b/resources/js/Languages/en.json
@@ -36,7 +36,8 @@
             "2faActive": "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.",
             "saveRecoveryCodes": "Store these recovery codes in a secure password manager. They can be used to recover access to your account if your two factor authentication device is lost.",
             "setup-key": "Setup key"
-        }
+        },
+        "info": "Info"
     },
     "common": {
 
